--- a/app/view/converter-add.component.html
+++ b/app/view/converter-add.component.html
@@ -1,4 +1,4 @@
-<div class="container" >
+<div class="row" >
     <div class="row">
         <div class="col-md-3">
             <button class="btn btn-primary" (click)="goBack()">
