--- a/app/view/app.component.html
+++ b/app/view/app.component.html
@@ -60,25 +60,27 @@
 	<div id="sidebar-wrapper" *ngIf="loggedUser">
 		<ul class="sidebar-nav">
 			<li class="sidebar-brand">
-				<a href="#">
+				<a href="#" i18n>
 					Translation Manager
 				</a>
 			</li>
 			<li>
-				<a routerLink="/project-list" routerLinkActive="active">
-					Projects
+
+				<a routerLink="/project-list" routerLinkActive="active" i18n>
+					<i class="fa fa-archive"></i> Projects
 				</a>
 			</li>
 
 			<li>
-				<a routerLink="/converter-list" routerLinkActive="active">
-					Converters
+
+				<a routerLink="/converter-list" routerLinkActive="active" i18n>
+					<i class="fa fa-arrows-h"></i> Converters
 				</a>
 			</li>
 
 			<li *ngIf="loggedUser.role === 'ADMIN'">
-				<a routerLink="/user-list" routerLinkActive="active">
-					Users
+				<a routerLink="/user-list" routerLinkActive="active" i18n>
+					<i class="fa fa-users"></i> Users
 				</a>
 			</li>
 		</ul>
