--- a/app/view/project-detail.component.html
+++ b/app/view/project-detail.component.html
@@ -1,53 +1,67 @@
 <div class="row">
-	<div class="action-edit-buttons">
-		<button class="btn btn-primary" (click)="goBack()">
-			<i class="glyphicon glyphicon-arrow-left"></i> Back
-		</button>
-		<button class="btn btn-success" (click)="edit()">
-			Edit
-		</button>
+	<div class="col-md-12">
+		<div class="action-edit-buttons">
+			<button class="btn btn-primary" (click)="goBack()">
+				<i class="glyphicon glyphicon-arrow-left"></i> Back
+			</button>
+			<button class="btn btn-success" (click)="edit()">
+				<i class="fa fa-pencil"></i> Edit
+			</button>
 
-		<button class="btn btn-danger" (click)="delete()">
-			Delete
-		</button>
+			<button class="btn btn-danger" (click)="delete()">
+				<i class="fa fa-trash"></i> Delete
+			</button>
+		</div>
 	</div>
-	<div *ngIf="project" class="panel panel-default">
-		<div class="panel-body">
-			<div>
-				<label>Database Id:</label>
-				<p>{{project.id}}</p>
-			</div>
-			<div>
-				<label>Project Id:</label>
-				<p>{{project.hashMapIdentifier}}</p>
-			</div>
-			<div>
-				<label>Project name:</label>
-				<p>{{project.name}}</p>
-			</div>
-			<div>
-				<label>Assignee:</label>
-				<p>{{project.assignee ? project.assignee.name : ''}}</p>
-			</div>
-			<div>
-				<label>Approval:</label>
-				<p>{{project.approval ? project.approval.name : ''}}</p>
-			</div>
-			<div>
-				<label>Git url:</label>
-				<p>{{project.git}}</p>
-			</div>
 
-			<div>
-				<label>Resource path:</label>
-				<p>{{project.resourcePath}}</p>
+
+	<div class="col-md-9">
+		<div *ngIf="project" class="panel panel-default">
+			<div class="panel-heading">
+				<h2>Project information</h2>
 			</div>
-			<div>
-				<label>Project branches: </label>
-				<p>{{project.branches.join(', ')}}</p>
+			<div class="panel-body">
+				<div>
+					<label>Database Id:</label>
+					<p>{{project.id}}</p>
+				</div>
+				<div>
+					<label>Project Id:</label>
+					<p>{{project.hashMapIdentifier}}</p>
+				</div>
+				<div>
+					<label>Project Name:</label>
+					<p>{{project.name}}</p>
+				</div>
+				<div>
+					<label>Assignee:</label>
+					<p>{{project.assignee ? project.assignee.name : 'No Assignee'}}</p>
+				</div>
+				<div>
+					<label>Approval:</label>
+					<p>{{project.approval ? project.approval.name : 'No Approval'}}</p>
+				</div>
+				<div>
+					<label>Git Url:</label>
+					<p>{{project.git}}</p>
+				</div>
+
+				<div>
+					<label>Resource Path:</label>
+					<p>{{project.resourcePath}}</p>
+				</div>
+				<div>
+					<label>Branches: </label>
+					<p>{{project.branches.join(', ')}}</p>
+				</div>
 			</div>
 		</div>
 	</div>
+	<div class="col-md-3" *ngIf="project">
+		<history-panel [getChangedValues]="computeChangedValues"></history-panel>
+	</div>
+
+
 </div>
 
 
