Adding design updates

--- a/app/view/app.component.html
+++ b/app/view/app.component.html
@@ -67,20 +67,20 @@
 			<li>
 
 				<a routerLink="/project-list" routerLinkActive="active" i18n>
-					<i class="fa fa-archive"></i> Projects
+					 Projects
 				</a>
 			</li>
 
 			<li>
 
 				<a routerLink="/converter-list" routerLinkActive="active" i18n>
-					<i class="fa fa-arrows-h"></i> Converters
+					 Converters
 				</a>
 			</li>
 
 			<li *ngIf="loggedUser.role === 'ADMIN'">
 				<a routerLink="/user-list" routerLinkActive="active" i18n>
-					<i class="fa fa-users"></i> Users
+					 Users
 				</a>
 			</li>
 		</ul>
