--- a/app/view/project-detail.component.html
+++ b/app/view/project-detail.component.html
@@ -22,36 +22,36 @@
 			</div>
 			<div class="panel-body">
 				<div>
-					<label>Database Id:</label>
+					<label><span>Database Id</span></label>
 					<p>{{project.id}}</p>
 				</div>
 				<div>
-					<label>Project Id:</label>
+					<label><span>Project Id</span></label>
 					<p>{{project.hashMapIdentifier}}</p>
 				</div>
 				<div>
-					<label>Project Name:</label>
+					<label><span>Project Name</span></label>
 					<p>{{project.name}}</p>
 				</div>
 				<div>
-					<label>Assignee:</label>
+					<label><span>Assignee</span></label>
 					<p>{{project.assignee ? project.assignee.name : 'No Assignee'}}</p>
 				</div>
 				<div>
-					<label>Approval:</label>
+					<label><span>Approval</span></label>
 					<p>{{project.approval ? project.approval.name : 'No Approval'}}</p>
 				</div>
 				<div>
-					<label>Git Url:</label>
+					<label><span>Git Url</span></label>
 					<p>{{project.git}}</p>
 				</div>
 
 				<div>
-					<label>Resource Path:</label>
+					<label><span>Resource Path</span></label>
 					<p>{{project.resourcePath}}</p>
 				</div>
 				<div>
-					<label>Branches: </label>
+					<label><span>Branches</span></label>
 					<p>{{project.branches.join(', ')}}</p>
 				</div>
 			</div>
