--- a/app/styles/detail.component.css
+++ b/app/styles/detail.component.css
@@ -1,21 +1,22 @@
 .panel .panel-body label {
     padding: 5px;
     width: 25%;
-    outline: 1px solid #ccc;
-    box-shadow: 1px 1px 1px 1px #ccc;
     font-size: 18px;
+    color: #999;
     background-color: #fff;
+}
+
+label span {
 }
 
 .panel .panel-body p {
     width: 70%;
     padding: 5px;
     text-align: center;
-    box-shadow: 1px 1px 1px 1px #ccc;
-    outline: 1px solid #ccc;
     font-size: 18px;
     font-style: italic;
     background-color: #fff;
+    border: 1px solid #eee;
 }
 
 .panel .panel-body p:hover {
@@ -27,22 +28,22 @@
 }
 
 .panel-body {
-    background-color: #F6F7F9;
+    background-color: #fff;
 }
 
 .panel-heading h2 {
-    color: #444;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: lighter;
     top: 12px;
-    background-color: #F6F7F9;
+    background-color: #fffffc;
     display: inline;
-    font-size: 36px;
+    font-size: 28px;
     padding-right: 10px;
-    padding-left: 10px;
+    padding-left: 5px;
+    color: #777;
 }
 
 .panel-heading {
-    background-color: #F6F7F9;
+    background-color: #fffffc;
 }
 
