--- a/app/styles/history-panel.component.css
+++ b/app/styles/history-panel.component.css
@@ -23,11 +23,11 @@
 
 .history-heading {
     padding: 0;
-    background-color: #F6F7F9;
+    background-color: #fffffc;
 }
 
 .history-heading h2 {
-    font-size: 36px;
+    font-size: 28px;
     display: inline-block;
     padding-left: 20px;
     margin-top: 10px;
